--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="songtrackerApp">
+<html lang="en" ng-app="songtrackerApp" manifest="manifest.appcache">
 <head>
     <meta charset="UTF-8">
     <title>Song Tracker</title>
